--- a/src/app/trade/components/trade-home/trade-home.component.html
+++ b/src/app/trade/components/trade-home/trade-home.component.html
@@ -1,1 +1,6 @@
-<button color="primary" mat-raised-button (click)="search()">Search</button>
+<form [formGroup]="bulkSearchForm">
+  <mat-form-field>
+    <input type="text" matInput formControlName="wanted" placeholder="Maps to look for">
+  </mat-form-field>
+  <button style="margin-left: 0.5rem;" [disabled]="searching || !bulkSearchForm.valid" color="primary" mat-raised-button (click)="search()">Search</button>
+</form>
