Raw output for results

--- a/src/app/trade/components/trade-home/trade-home.component.html
+++ b/src/app/trade/components/trade-home/trade-home.component.html
@@ -1,6 +1,23 @@
-<form [formGroup]="bulkSearchForm">
-  <mat-form-field>
-    <input type="text" matInput formControlName="wanted" placeholder="Maps to look for">
-  </mat-form-field>
-  <button style="margin-left: 0.5rem;" [disabled]="searching || !bulkSearchForm.valid" color="primary" mat-raised-button (click)="search()">Search</button>
-</form>
+<mat-card style="margin: 0.5rem;">
+  <mat-card-header>
+    <mat-card-title>Bulk-Search for maps</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <form [formGroup]="bulkSearchForm">
+      <mat-form-field>
+        <input type="text" matInput formControlName="wanted" placeholder="Maps to look for">
+      </mat-form-field>
+    </form>
+    <mat-card-actions>
+      <button style="margin-left: 0.5rem;" [disabled]="searching || !bulkSearchForm.valid" color="primary"
+        mat-raised-button (click)="search()">Search</button>
+    </mat-card-actions>
+  </mat-card-content>
+  <mat-card-footer>
+    <div style="margin: 0 0.5rem;">
+      <small>*Currently, this tool always trades for chisels</small>
+    </div>
+  </mat-card-footer>
+</mat-card>
+
+<pre class="mt-4" *ngFor="let result of results; trackBy: resultsTrackerFn">{{result | json}}</pre>
