--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mt-4 {
   margin-top: 1rem;
 }
+
+.d-flex {
+  display: flex;
+}
+
+.justify-content-between {
+  justify-content: space-between;
+}
+
+.ml-auto {
+  margin-left: auto;
+}
