--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,3 +18,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .ml-auto {
   margin-left: auto;
 }
+
+.wrap {
+  flex-wrap: wrap;
+}
