--- a/src/app/trade/components/trade-home/trade-home.component.html
+++ b/src/app/trade/components/trade-home/trade-home.component.html
@@ -27,7 +27,7 @@
   </mat-card-content>
   <mat-card-footer>
     <div style="margin: 0 0.5rem;">
-      <small>*Currently, this tool always trades for chisels</small>
+      <small>Combining different currencies is not possible. Make a smart choice (e.g. don't select alch for T15 maps)</small>
     </div>
   </mat-card-footer>
 </mat-card>
@@ -46,6 +46,10 @@
     </mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    {{ result.whisper }}
+    <div class="d-flex">
+      <mat-form-field style="width: 100%;">
+        <textarea rows="3" [value]="result.whisper" matInput></textarea>
+      </mat-form-field>
+    </div>
   </mat-card-content>
 </mat-card>
