--- a/src/app/trade/components/trade-home/trade-home.component.html
+++ b/src/app/trade/components/trade-home/trade-home.component.html
@@ -20,7 +20,7 @@
     <mat-card-actions>
       <div style="display: flex; align-items: center;">
         <button style="margin-left: 0.5rem;" [disabled]="searching || !bulkSearchForm.valid" color="primary"
-          mat-raised-button (click)="search()">Search</button>
+          mat-raised-button (click)="search(bulkSearchForm.controls['wanted'].value, bulkSearchForm.controls['currency'].value)">Search</button>
         <mat-spinner style="margin-left: 0.5rem;" [diameter]="30" *ngIf="searching"></mat-spinner>
       </div>
     </mat-card-actions>
