Request for static trade data from assets folder

--- a/src/app/trade/components/trade-home/trade-home.component.html
+++ b/src/app/trade/components/trade-home/trade-home.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="leagues$ | async; let leagues; else loading">
+<ng-container *ngIf="mapsAndLeagues$ | async; let mapsAndLeagues; else loading">
   <mat-card style="margin: 0.5rem;">
     <mat-card-header>
       <mat-card-title>Bulk-Search for maps</mat-card-title>
@@ -7,7 +7,7 @@
       <form [formGroup]="bulkSearchForm">
         <mat-form-field>
           <mat-select required formControlName="league" placeholder="League">
-            <mat-option *ngFor="let league of leagues" [value]="league.id">{{ league.id }}</mat-option>
+            <mat-option *ngFor="let league of mapsAndLeagues.leagues" [value]="league.id">{{ league.id }}</mat-option>
           </mat-select>
         </mat-form-field>
         <div class="d-flex wrap">
